WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
108807
Coordinated Graphics : disconnectCustomFilterProgram does not do anything.
https://bugs.webkit.org/show_bug.cgi?id=108807
Summary
Coordinated Graphics : disconnectCustomFilterProgram does not do anything.
Gwang Yoon Hwang
Reported
2013-02-04 03:13:45 PST
Coordinated Graphics : disconnectCustomFilterProgram does not do anything.
Attachments
Patch
(1.92 KB, patch)
2013-02-04 03:16 PST
,
Gwang Yoon Hwang
no flags
Details
Formatted Diff
Diff
Patch
(1.93 KB, patch)
2013-02-04 14:51 PST
,
Gwang Yoon Hwang
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Gwang Yoon Hwang
Comment 1
2013-02-04 03:16:34 PST
Created
attachment 186333
[details]
Patch
Noam Rosenthal
Comment 2
2013-02-04 14:49:08 PST
Comment on
attachment 186333
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=186333&action=review
LGTM, needs WK2 owner to review.
> Source/WebKit2/ChangeLog:9 > + disconnect when CoordinatedLayerTreeHost destructed.
destructed -> gets destructed.
Gwang Yoon Hwang
Comment 3
2013-02-04 14:51:56 PST
Created
attachment 186465
[details]
Patch
Gwang Yoon Hwang
Comment 4
2013-02-04 14:53:21 PST
(In reply to
comment #2
)
> (From update of
attachment 186333
[details]
) > View in context:
https://bugs.webkit.org/attachment.cgi?id=186333&action=review
> > LGTM, needs WK2 owner to review. > > > Source/WebKit2/ChangeLog:9 > > + disconnect when CoordinatedLayerTreeHost destructed. > > destructed -> gets destructed.
Thanks. I fixed the sentence.
WebKit Review Bot
Comment 5
2013-02-04 20:46:36 PST
Comment on
attachment 186465
[details]
Patch Clearing flags on attachment: 186465 Committed
r141853
: <
http://trac.webkit.org/changeset/141853
>
WebKit Review Bot
Comment 6
2013-02-04 20:46:39 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug