Coordinated Graphics : disconnectCustomFilterProgram does not do anything. https://bugs.webkit.org/show_bug.cgi?id=108807

Patch by Gwang Yoon Hwang <ryumiel@company100.net> on 2013-02-04
Reviewed by Anders Carlsson.

We need to add newly created WebCustomFilterProgramProxy to a hashset to
disconnect when CoordinatedLayerTreeHost gets destructed.

* WebProcess/WebPage/CoordinatedGraphics/CoordinatedLayerTreeHost.cpp:
(WebKit::CoordinatedLayerTreeHost::checkCustomFilterProgramProxies):

Canonical link: https://commits.webkit.org/127112@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@141853 268f45cc-cd09-0410-ab3c-d52691b4dbfc